save tooltip z-index fix

--- a/css/xiSPEC_tooltip.css
+++ b/css/xiSPEC_tooltip.css
@@ -1,8 +1,6 @@
 span.xispec_tooltip_tr {
       margin-top: 35px;
       margin-left: -110px;
-      /* display: inline; */
-      /* white-space: nowrap; */
       position: absolute;
       width: 200px;
       height: 80px;
@@ -12,7 +10,7 @@ span.xispec_tooltip_tr {
       text-align: center;
       color: #fff;
       background: rgba(51, 51, 51, 0.8);
-      /* border: 1px solid #333; */
+      z-index: 999;
       border-radius: 10px;
       text-shadow: rgba(0, 0, 0, 0.1) 1px 1px 1px;
       box-shadow: rgba(0, 0, 0, 0.1) 1px 1px 2px 0px;
